--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -1,14 +1,220 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
   <title>課表</title>
+
+  <style>
+    th {
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+      margin: auto 0px;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>hello</h1>
+  <div class="table-responsive">
+
+    <table class="table table-dark table-hover table-bordered table-responsive">
+      <thead>
+        <tr>
+          <th scope="col"><i class="bi bi-journal-bookmark-fill" style="color: #dedddb; font-size: 40px;"></i></th>
+          <th scope="col schedule-week">Monday</th>
+          <th scope="col schedule-week">Tuesday</th>
+          <th scope="col schedule-week">Wednesday</th>
+          <th scope="col schedule-week">Thursday</th>
+          <th scope="col schedule-week">Friday</th>
+          <th scope="col schedule-week">Saturday</th>
+          <th scope="col schedule-week">Sunday</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">X<br><span class="text-info">07:05 ~ 07:55</span></th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">1<br><span class="text-primary">08:05 ~ 08:55</span></th>
+
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">2<br><span class="text-primary">09:05 ~ 09:55</span></th>
+
+          <td></td>
+          <td class="mx-auto">視窗程式設計<br>
+            <div>工學院209</div>
+          </td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">3<br><span class="text-primary">10:10 ~ 11:00</span></th>
+
+          <td></td>
+          <td>視窗程式設計</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">4<br><span class="text-primary">11:10 ~ 12:00</span></th>
+
+          <td></td>
+          <td>視窗程式設計</td>
+          <td></td>
+          <td></td>
+          <td>視窗程式設計</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">Y<br><span class="text-warning">12:10 ~ 13:00</span></th>
+
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>視窗程式設計</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">5<br><span class="text-primary">13:10 ~ 14:00</span></th>
+
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>視窗程式設計</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">6<br><span class="text-primary">14:10 ~ 15:00</span></th>
+
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">7<br><span class="text-primary">15:15 ~ 16:05</span></th>
+
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">8<br><span class="text-primary">16:20 ~ 17:10</span></th>
+
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">9<br><span class="text-secondary">17:20 ~ 18:10</span></th>
+
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">10<br><span class="text-secondary"">18:20 ~ 19:10</span></th>
+
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <th scope=" row">11<br><span class="text-secondary">19:15 ~ 20:05</span></th>
+
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">12<br><span class="text-secondary">20:10 ~ 21:00</span></th>
+
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row">13<br><span class="text-secondary">21:05 ~ 21:55</span></th>
+
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+
+  </div>
+
 
   <script src="../../js/courses.js"></script>
 </body>
+
 </html>
