--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -22,12 +22,23 @@
       text-align: center;
       margin: auto 0px;
     }
+
+    table {
+      position: relative;
+    }
+
+    .display-weekend {
+      position: absolute;
+      right: 0px;
+      top: 50%;
+      z-index: 1;
+    }
   </style>
 </head>
 
 <body>
   <div class="table-responsive">
-
+    <button class="bi bi-arrow-right-square-fill btn display-weekend btn-dark" style="font-size: 40px;"></button>
     <table class="table table-dark table-hover table-bordered table-responsive">
       <thead>
         <tr>
