--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -23,12 +23,16 @@
       margin: auto 0px;
     }
 
+    td {
+      text-align: center;
+    }
+
     table {
       position: relative;
     }
 
     .display-weekend {
-      position: absolute;
+      position: fixed;
       right: 0px;
       top: 50%;
       z-index: 1;
@@ -37,192 +41,228 @@
 </head>
 
 <body>
-  <div class="table-responsive">
-    <button class="bi bi-arrow-right-square-fill btn display-weekend btn-dark" style="font-size: 40px;"></button>
-    <table class="table table-dark table-hover table-bordered table-responsive">
-      <thead>
-        <tr>
-          <th scope="col"><i class="bi bi-journal-bookmark-fill" style="color: #dedddb; font-size: 40px;"></i></th>
-          <th scope="col schedule-week">Monday</th>
-          <th scope="col schedule-week">Tuesday</th>
-          <th scope="col schedule-week">Wednesday</th>
-          <th scope="col schedule-week">Thursday</th>
-          <th scope="col schedule-week">Friday</th>
-          <th scope="col schedule-week">Saturday</th>
-          <th scope="col schedule-week">Sunday</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">X<br><span class="text-info">07:05 ~ 07:55</span></th>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">1<br><span class="text-primary">08:05 ~ 08:55</span></th>
+  <div class="container">
+    <div class="table-responsive">
+      <button data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
+        class="bi bi-arrow-left-square-fill btn display-weekend btn-dark" style="font-size: 40px;"></button>
+      <div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="offcanvasExample"
+        aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas-header">
+          <button type="button" class="btn-close text-reset btn-light" data-bs-dismiss="offcanvas"
+            aria-label="Close"></button>
+        </div>
 
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">2<br><span class="text-primary">09:05 ~ 09:55</span></th>
-
-          <td></td>
-          <td class="mx-auto">視窗程式設計<br>
-            <div>工學院209</div>
-          </td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">3<br><span class="text-primary">10:10 ~ 11:00</span></th>
-
-          <td></td>
-          <td>視窗程式設計</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">4<br><span class="text-primary">11:10 ~ 12:00</span></th>
-
-          <td></td>
-          <td>視窗程式設計</td>
-          <td></td>
-          <td></td>
-          <td>視窗程式設計</td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">Y<br><span class="text-warning">12:10 ~ 13:00</span></th>
-
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td>視窗程式設計</td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">5<br><span class="text-primary">13:10 ~ 14:00</span></th>
-
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td>視窗程式設計</td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">6<br><span class="text-primary">14:10 ~ 15:00</span></th>
-
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">7<br><span class="text-primary">15:15 ~ 16:05</span></th>
-
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">8<br><span class="text-primary">16:20 ~ 17:10</span></th>
-
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">9<br><span class="text-secondary">17:20 ~ 18:10</span></th>
-
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">10<br><span class="text-secondary"">18:20 ~ 19:10</span></th>
-
+        <table class="table table-dark table-hover table-bordered">
+          <thead>
+            <tr>
+              <th scope="col">Saturday</th>
+              <th scope="col">Sunday</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>視窗程式設計</td>
               <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+            </tr>
+            <tr>
               <td></td>
               <td></td>
             </tr>
             <tr>
-              <th scope=" row">11<br><span class="text-secondary">19:15 ~ 20:05</span></th>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
 
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">12<br><span class="text-secondary">20:10 ~ 21:00</span></th>
+      </div>
+      <table class="table table-dark table-hover table-bordered">
+        <thead>
+          <tr>
+            <th scope="col"><i class="bi bi-journal-bookmark-fill" style="color: #dedddb; font-size: 40px;"></i></th>
+            <th scope="col schedule-week">Monday</th>
+            <th scope="col schedule-week">Tuesday</th>
+            <th scope="col schedule-week">Wednesday</th>
+            <th scope="col schedule-week">Thursday</th>
+            <th scope="col schedule-week">Friday</th>
 
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">13<br><span class="text-secondary">21:05 ~ 21:55</span></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">X<br><span class="text-info">07:05 ~ 07:55</span></th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
 
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
+          </tr>
+          <tr>
+            <th scope="row">1<br><span class="text-primary">08:05 ~ 08:55</span></th>
 
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+          </tr>
+          <tr>
+            <th scope="row">2<br><span class="text-primary">09:05 ~ 09:55</span></th>
+
+            <td></td>
+            <td class="mx-auto">視窗程式設計<br>
+              <div>工學院209</div>
+            </td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+          </tr>
+          <tr>
+            <th scope="row">3<br><span class="text-primary">10:10 ~ 11:00</span></th>
+
+            <td></td>
+            <td>視窗程式設計</td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+          </tr>
+          <tr>
+            <th scope="row">4<br><span class="text-primary">11:10 ~ 12:00</span></th>
+
+            <td></td>
+            <td>視窗程式設計</td>
+            <td></td>
+            <td></td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <th scope="row">Y<br><span class="text-warning">12:10 ~ 13:00</span></th>
+
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <th scope="row">5<br><span class="text-primary">13:10 ~ 14:00</span></th>
+
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <th scope="row">6<br><span class="text-primary">14:10 ~ 15:00</span></th>
+
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+          </tr>
+          <tr>
+            <th scope="row">7<br><span class="text-primary">15:15 ~ 16:05</span></th>
+
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+          </tr>
+          <tr>
+            <th scope="row">8<br><span class="text-primary">16:20 ~ 17:10</span></th>
+
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+          </tr>
+          <tr>
+            <th scope="row">9<br><span class="text-secondary">17:20 ~ 18:10</span></th>
+
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+          </tr>
+          <tr>
+            <th scope="row">10<br><span class="text-secondary">18:20 ~ 19:10</span></th>
+
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+          </tr>
+          <tr>
+            <th scope=" row">11<br><span class="text-secondary">19:15 ~ 20:05</span></th>
+
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+          </tr>
+          <tr>
+            <th scope="row">12<br><span class="text-secondary">20:10 ~ 21:00</span></th>
+
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+          </tr>
+          <tr>
+            <th scope="row">13<br><span class="text-secondary">21:05 ~ 21:55</span></th>
+
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
   </div>
+
+
 
 
   <script src="../../js/courses.js"></script>
