--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -258,7 +258,20 @@
     </div>
   </div>
 
-
+  <div>
+      <table id = "test">
+        <% for(let i=1;i<=15;i++){ %>
+          <tr>
+            <% for(let j=1;j<=7;j++){ %>
+              <% for(let k=1;k<=3;k++){ %>
+              <td id="<%= i+'-'+j+'-'+k %>">
+                <%= i+'-'+j+'-'+k %>
+              <% } %>
+            <% } %>
+            </td>
+          </tr><% } %>
+      </table>
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="../../js/courses.js"></script>
