feat: 新增六日的按鈕跟channel改2

--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -49,10 +49,29 @@
       color: wheat;
       font-size: 50px;
     }
+
+    .btn-scroll1 {
+      position: absolute;
+      top: 50%;
+      right: 0;
+    }
+
+    .btn-scroll2 {
+      position: absolute;
+      top: 40%;
+      right: 0;
+    }
+
+    .bi {
+      font-size: 50px;
+      color: red;
+    }
   </style>
 </head>
 
 <body>
+  <button id="right-arrow" class="btn-scroll1 btn"><i class="bi bi-arrow-right-circle"></i></button>
+  <button id="left-arrow" class="btn-scroll2 btn"><i class="bi bi-arrow-left-circle"></i></button>
   <div class="container-fluid">
     <div class="row">
       <div class="g-0 col-2 bg-danger icon">
