--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -6,67 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="../../style/css/courses.css">
+  <link rel="stylesheet" href="../../style/css/feat_courses.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
   </script>
   <title>課表</title>
 
-  <style>
-    td {
-      text-align: center;
-    }
-
-    th {
-      margin: auto;
-      text-align: center;
-    }
-
-    .time {
-      text-align: center;
-    }
-
-    .time>div {
-      padding: 15px 0px;
-      border: 2px solid aliceblue;
-    }
-
-    .header {
-      background-color: rgb(40, 106, 165);
-      border: 2px solid aliceblue;
-    }
-
-    .header>div {
-      width: 62px;
-      padding: 0px 15px;
-    }
-
-    .icon {
-      text-align: center;
-      color: wheat;
-      font-size: 50px;
-    }
-
-    .btn-scroll1 {
-      position: absolute;
-      top: 50%;
-      right: 0;
-    }
-
-    .btn-scroll2 {
-      position: absolute;
-      top: 40%;
-      right: 0;
-    }
-
-    .bi {
-      font-size: 50px;
-      color: red;
-    }
-  </style>
 </head>
 
 <body>
@@ -74,19 +20,21 @@
   <button id="left-arrow" class="btn-scroll2 btn"><i class="bi bi-arrow-left-circle"></i></button>
   <div class="container-fluid">
     <div class="row">
-      <div class="g-0 col-2 bg-danger icon">
-        <i class="bi bi-calendar"></i>
+      <div class="g-0 col-2 icon bg-dark">
+        <i class="bi bi-calendar calendar"></i>
       </div>
-      <div class="g-0 col-10 header d-flex justify-content-around align-items-center">
-        <div>Mon.</div>
-        <div>Tue.</div>
-        <div>Wed.</div>
-        <div>Thu.</div>
-        <div>Fri.</div>
-      </div>
+      <table>
+        <tr>
+          <td>Mon.</td>
+          <td>Tue.</td>
+          <td>Wed.</td>
+          <td>Thu.</td>
+          <td>Fri.</td>
+        </tr>
+      </table>
     </div>
     <div class="row">
-      <div class="g-0 col-2 bg-primary time">
+      <div class="g-0 col-2 bg-dark text-light time">
         <div>
           <h2>X</h2>
           <p>07:05 ~ 07:55</p>
@@ -147,10 +95,46 @@
           <h2>13</h2>
           <p>21:05 ~ 21:55</p>
         </div>
-
       </div>
-      <div class="g-0 col-10 bg-info schedule">
-        <table class="table">
+      <div class="g-0 col-10 schedule" id="schedule">
+        <table class="table border-2 border-dark">
+          <tr>
+            <td class="res-td">
+              <h5>視窗程式設計</h5>
+              <p>工學院209</p>
+            </td>
+            <td class="res-td">
+              <h5>視窗程式設計</h5>
+              <p>工學院209</p>
+            </td>
+            <td class="res-td">
+              <h5>視窗程式設計</h5>
+              <p>工學院209</p>
+            </td>
+            <td class="res-td">
+              <h5>視窗程式設計</h5>
+              <p>工學院209</p>
+            </td>
+            <td class="res-td">
+              <h5>視窗程式設計</h5>
+              <p>工學院209</p>
+            </td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+          </tr>
           <tr>
             <td>視窗程式設計</td>
             <td>視窗程式設計</td>
@@ -237,8 +221,102 @@
           </tr>
         </table>
       </div>
+
+    </div>
+    <div class="row">
+      <div class="g-0 offset-2 col-10 header weekend-header d-flex justify-content-around" id="i-weekend-header">
+        <div>Sat.</div>
+        <div>Sun.</div>
+      </div>
+      <div class="g-0 offset-2 col-10" id="weekend-schedule">
+        <table class="table border-2 border-dark">
+          <tr>
+            <td class="res-td">
+              <h5>視窗程式設計</h5>
+              <p>工學院209</p>
+            </td>
+            <td class="res-td">
+              <h5>視窗程式設計</h5>
+              <p>工學院209</p>
+            </td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+          <tr>
+            <td>視窗程式設計</td>
+            <td>視窗程式設計</td>
+
+          </tr>
+        </table>
+      </div>
     </div>
   </div>
+  </div>
+
 
   <div>
     <table id="test">
