--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-  <button id="right-arrow" class="btn-scroll1 btn"><i class="bi bi-arrow-right-circle"></i></button>
-  <button id="left-arrow" class="btn-scroll2 btn"><i class="bi bi-arrow-left-circle"></i></button>
+  <!-- <button id="right-arrow" class="btn-scroll1 btn"><i class="bi bi-arrow-right-circle"></i></button>
+  <button id="left-arrow" class="btn-scroll2 btn"><i class="bi bi-arrow-left-circle"></i></button> -->
   <div class="container-fluid">
     <div class="row">
       <div class="g-0 col-2 icon bg-dark">
