--- a/public/style/css/feat_courses.css
+++ b/public/style/css/feat_courses.css
@@ -1,81 +1,121 @@
-.table {
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  
+  body {
+    display: flex;
+    position: relative;
+  }
+  
+  .toggleForWeekend{
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    z-index: 100;
+    background-color: #383837;
+    border-radius: 100%;
+    border-color: cadetblue;
+    background-color: lightblue;
+  }
+  .bi-arrow-left-right{
+    color: cadetblue;
+    font-size: 30px;
+  }
+  
+  table {
+    margin: 0;
+    padding: 0;
+    border-spacing: 0;
+    border-collapse: collapse;
+  }
+  .table{
     margin-bottom: 0;
-}
-
-.table> :not(caption)>*>* {
-    padding: 0px;
-}
-
-td {
+  }
+  
+  td {
+    width: 100px;
+    height: 70px;
     text-align: center;
-    height: 120px;
+    border: #383837 1px solid;
+    margin: 0;
+    padding: 0;
+  }
+  
+  #time {
+    font-family: 'Comic Sans MS', cursive;
+    left: 0;
+    z-index: 3;
+    width: 100px;
+    height: 500px;
+  }
+  .time h6{
+    font-weight: bold;
+    font-size: 20px;
+  }
+  
+  #containerForWeek {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    display: flex;
+    flex-direction: column;
+  }
+  #containerForWeekend {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  #weekday {
+    font-family: 'Comic Sans MS', cursive;
     display: table-cell;
     vertical-align: middle;
-    border: 2px solid #383837;
-    padding: 0px 4px;
-}
-
-@media screen and (max-width: 500px) {
-    td {
-        height: 135px;
-    }
-}
-
-.res-td>h5 {
-    font-weight: 900;
-}
-
-.res-td>p {
-    width: 60px;
-    height: 30%;
-    margin-bottom: 0px;
-}
-
-
-.time {
-    text-align: center;
-}
-
-.time>div {
-    padding: 15px 0px;
-    border: 2px solid #383837;
-}
-
-.header {
-    background-color: rgb(40, 106, 165);
-    border-bottom: 2px solid #383837;
-    display: flex;
-}
-
-.header>div {
-    width: 62.5px;
-    height: 100%;
-    border: 2px solid #383837;
-    text-align: center;
-    padding: 20px 0px;
-    font-size: 22px;
+    width: 500px;
+    height: 70px;
+    z-index: 2;
+    color: #333;
+    font-size: 28px;
     font-weight: bold;
-}
-
-.weekend-header>div {
-    width: 50%;
-}
-
-.schedule {
-    background-color: aliceblue;
-}
-
-.icon {
-    text-align: center;
-    font-size: 50px;
-}
-
-
-.bi {
-    font-size: 50px;
-    color: red;
-}
-
-.calendar {
-    color: whitesmoke;
-}
+  }
+  #weekend {
+    font-family: 'Comic Sans MS', cursive;
+    display: table-cell;
+    vertical-align: middle;
+    width: 200px;
+    z-index: 3;
+    color: #333;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  #courseForWeek {
+    position: relative;
+    display: table-cell;
+    vertical-align: middle;
+    width: 500px;
+    font-family: "源泉圓體";
+    font-weight: 500;
+    background-color: #ebebeb;
+  }
+  #courseForWeekend {
+    position: relative;
+    display: table-cell;
+    vertical-align: middle;
+    width: 500px;
+    font-family: "源泉圓體";
+    font-weight: 500;
+    background-color: #ebebeb;
+  }
+  .course tr td{
+    height: 137px;
+  }
+  @media screen and (min-width: 468px ){
+    .course tr td{
+      height: 113px;
+    }
+  }
+  
