--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -22,10 +22,11 @@
 </style>
 
 <body>
-  <button class="btn toggleForWeekend" id="idForButton" onclick="tran()"><i class="bi bi-arrow-left-right"></i></button>
+  <button class="btn toggleForWeekend btn-effect" id="idForButton" onclick="tran()"><i
+      class="bi bi-arrow-left-right"></i></button>
   <table class="table table-responsive time" id="time">
     <tr>
-      <td><i class="bi bi-calendar" style="font-size: 35px; color: #383837"></i></td>
+      <td><i class="bi bi-calendar" style="font-size: 35px; color: #3a584e"></i></td>
     </tr>
     <tr>
       <td>
