--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <link rel="stylesheet" href="../../style/css/courses.css">
   <link rel="stylesheet" href="../../style/css/feat_courses.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -23,14 +23,19 @@
 </style>
 
 <body>
-  <button class="btn toggleForWeekend btn-effect" id="idForButton" onclick="tran()"><i
-      class="bi bi-arrow-left-right"></i></button>
+  <button class="toggleForWeekend btn-effect" id="idForButton" onclick="tran()"><span
+      class="material-icons-round exchange">
+      swap_horiz
+    </span>
+  </button>
 
 
   <div class="wrap" id="Wrap">
     <table class="table time" id="time">
       <tr class="icon">
-        <td><i class="bi bi-calendar" style="font-size: 35px; color: #3a584e"></i></td>
+        <td><span class="material-icons-round calendar">
+            calendar_today
+          </span></td>
       </tr>
       <tr>
         <td>
