fixed: JS和HTML分離 取得參數方法改變(不切字串)

--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -23,7 +23,7 @@
 </style>
 
 <body>
-  <button class="toggleForWeekend btn-effect" id="idForButton" onclick="tran()"><span
+  <button class="toggleForWeekend btn-effect" id="idForButton"><span
       class="material-icons-round exchange">
       swap_horiz
     </span>
