fixed: 程式碼分類

--- a/public/style/css/feat_courses.css
+++ b/public/style/css/feat_courses.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+.effect {
+  opacity: 1;
+  transition: opacity 1s
+}
+
 .toggleForWeekend {
   position: fixed;
   bottom: 15px;
