--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -15,12 +15,6 @@
   <title>課表</title>
 
 </head>
-<style>
-  .test {
-    opacity: 1;
-    transition: opacity 1s
-  }
-</style>
 
 <body>
   <button class="toggleForWeekend btn-effect" id="idForButton"><span class="material-icons-round exchange">
@@ -128,7 +122,7 @@
       </tr>
     </table>
     <div id="containerForWeek">
-      <table class="table weekday test" id="weekday">
+      <table class="table weekday effect" id="weekday">
         <tr>
           <td>Mon.</td>
           <td>Tue.</td>
@@ -137,7 +131,7 @@
           <td>Fri.</td>
         </tr>
       </table>
-      <table class="table course test" id="courseForWeek">
+      <table class="table course effect" id="courseForWeek">
         <% for(let i=1;i<16;i++){ %>
         <tr>
           <% for(let j=1;j<6;j++){ %>
@@ -151,13 +145,13 @@
       </table>
     </div>
     <div id="containerForWeekend">
-      <table class="table weekend test" id="weekend" style="opacity: 0">
+      <table class="table weekend effect" id="weekend" style="opacity: 0">
         <tr>
           <td>Sat.</td>
           <td>Sun.</td>
         </tr>
       </table>
-      <table class="table course styleForWeekend test" style="opacity: 0" id="courseForWeekend">
+      <table class="table course styleForWeekend effect" style="opacity: 0" id="courseForWeekend">
         <% for(let i=1;i<16;i++){ %>
         <tr>
           <% for(let j=6;j<8;j++){ %>
@@ -171,7 +165,7 @@
       </table>
     </div>
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="../../js/courses.js"></script>
 </body>
