--- a/public/style/css/grades.css
+++ b/public/style/css/grades.css
@@ -43,8 +43,6 @@ body {
 
 /*--------------------------------------------------------*/
 .dropBtn {
-    /* position: sticky;
-    top: 0px; */
     padding-top: 50px;
     justify-content: space-around;
     width: 90vw;
@@ -52,24 +50,30 @@ body {
 }
 
 .dropBtn .choose {
+    font-family: "Gen Jyuu Gothic";
+    font-size: 18px;
+    font-weight: 500;
+    color: aliceblue;
     width: 40vw;
     margin: 0 auto;
     border-radius: 20px;
-    align-items: center;
-    height: 5vh;
+    height: 4vh;
     background: linear-gradient(to right, #183168, #8e9cbb);
-    transition: all 1s ease;
+    cursor: pointer;
+    box-shadow: 2px 2px 8px #383837;
 }
 
-/* .dropBtn .choose:hover {
-    opacity: 0.2;
-} */
-
-.dropBtn .choose .Input {
-    background-color: azure;
-    width: 28vw;
-    height: 4vh;
-    border-radius: 20px;
+.dropBtn .choose option {
+    cursor: pointer;
+    padding: 0 10px;
+    width: 20vw;
+    text-align: center;
+    font-family: "Gen Jyuu Gothic";
+    font-size: 16px;
+    font-weight: 500;
+    color: #d4d9e4;
+    cursor: pointer;
+    background-color: #455a88;
 }
 
 /*--------------------------------------------------------*/
